k8s/admin_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
      annotations:
        ci.github.com/revision: 6bf1e0863879700d269322eae9f72be7f0e96c04
    spec:
      containers:
        - name: admin
          image: 841702866815.dkr.ecr.ap-south-1.amazonaws.com/food-delivery-admin:6bf1e0863879700d269322eae9f72be7f0e96c04
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
