k8s/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        ci.github.com/revision: 0192420dfcffd76b43dd23500ba9fa3c97f53bf0
    spec:
      containers:
        - name: backend
          image: 841702866815.dkr.ecr.ap-south-1.amazonaws.com/food-delivery-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
