k8s/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        ci.github.com/revision: 6b61a14cfcd7d21282e2cde12a122364cb3df538
    spec:
      containers:
        - name: frontend
          image: 841702866815.dkr.ecr.ap-south-1.amazonaws.com/food-delivery-frontend:6b61a14cfcd7d21282e2cde12a122364cb3df538
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
