k8s/admin_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: admin-service
  namespace: food

spec:
  selector: 
    app: admin

  ports:
  - port: 80
    targetPort: 80
