k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: backend-service
  namespace: food

spec:
  selector: 
    app: backend

  ports:
  - port: 4000
    targetPort: 4000
